
== Unreleased

=== Added

* drop ID on section title if matches auto-generated value when :lazy_ids API option / --lazy-ids CLI option is set (#16)
* auto-generate IDs for section titles when :auto_ids option is set and :input is not GFM

=== Changed

* automatically set idprefix, if necessary, based on value of :auto_id_prefix option when :auto_ids options is set

== 1.0.0.alpha.12 (2018-08-11) - @mojavelinux

=== Added

* encode Markdown source passed to `convert` to UTF-8 with universal newlines unless :encode option is false
* `convert_file` now writes output to file specified by :to option, if given (#40)
* `convert_file` now returns output as string when value of :to option is falsy (#39)
* IO object can be used as value of :to option in `convert` and `convert_file` (#43)
* intermediate directories are now created in `convert` instead of `convert_file` (#45)
* `convert_file` now writes output file using explicit UTF-8 encoding (#46)
* prevent `convert_file` from using input file as implicit output file
* allow library to be required via alias `kramdoc`

=== Changed

* break on all terminal punctuation (period, question mark, and exclamation mark) when ventilating prose (#51)
* consolidated logic in CLI by further delegating to API

== 1.0.0.alpha.11 (2018-08-02) - @mojavelinux

=== Added

* add a public API (Kramdoc.convert and Kramdoc.convert_file) for converting input strings and paths, respectively (#31)
* update CLI to use public API (#31)
* run test suite on Windows using AppVeyor (#32)
* don't crash when empty comment occurs under primary text of list item
* convert phrase enclosed in <span> (#36)
* convert phrase enclosed in <mark>
* convert a bare <div> to a paragraph
* remove leading space from text if at beginning of line

=== Changed

* add code role to codespan if enclosed in quotes (required for AsciiDoc to parse properly) (#29)
* use unconstrained codespan if bounded on either side by a smart quote