@@ -1,0 +1,3 @@
+    * Connected to localhost (127.0.0.1) port 5252 (#0)
+    > GET / HTTP/1.1
+    > Host: localhost:5252
